# backend/api/routes/Authroutes.go
@@ -1,0 +1,16 @@
+package routes
+
+import (
+	"Server/controllers"
+	"Server/validation"
+
+	"github.com/gofiber/fiber/v2"
+)
+
+func SetupAuthRoutes(app *fiber.App) {
+	// auth
+	app.Post("/user/signup", validation.ValidateUser, controllers.Register)
+	// app.Post("/user/signin", validation.ValidateUser, controllers.Login)
+	// app.Get("/user/refresh", controllers.RefreshUser)
+
+}
